nama tempat keje

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <ul>
             <li>Umur 18 Tahun</li> 
             <li>Cyberjaya</li> 
+            <li>gfis</li>
         </ul>
     </body>
 </html>
